test deployments/nginx-deployment-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myweb-2
  annotations:
    name: test
    argocd.argoproj.io/sync-wave: "1"
