test deployments/nginx-deployment-test/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-2
  namespace: myweb-2
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: myapp-2
