test deployments/nginx-deployment-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-2
  namespace: myweb-2
  annotations:
    kubernetes.io/ingress.class: external-nginx
    cert-manager.io/cluster-issuer: letsencrypt-test
spec:
  ingressClassName: external-nginx
  rules:
    - host: www.princeokumo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp-2
                port:
                  number: 8080
  tls:
    - hosts:
        - www.princeokumo.com
      secretName: myapp-2-tls
